--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 DB_HOST = mongodb+srv://Lzaichenko:7bPN1yKX5W5XLShm@cluster0.sjyuo1b.mongodb.net/my-contacts?retryWrites=true&w=majority
 PORT = 3000
 JWT_SECRET =jIFdNRci6cdNIgIVrfKMsITDmJmKzAOK
+UKR_NET_PASSWOR = F030TQUhV5SVElxZ
+UKR_NET_FROM = zaylida.info@ukr.net
+BASE_URL = http://localhost:3000
